[gd_scene load_steps=9 format=3 uid="uid://dc8mfugocs6d1"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_016gh"]
[ext_resource type="Texture2D" uid="uid://wabfadqu4rq6" path="res://assets/textures/bg.png" id="1_oggnv"]
[ext_resource type="PackedScene" uid="uid://ci7bo6nh307ba" path="res://scenes/player.tscn" id="2_ambjr"]
[ext_resource type="PackedScene" uid="uid://cyml6452edntq" path="res://scenes/death_zone.tscn" id="4_8ls1t"]
[ext_resource type="PackedScene" uid="uid://ikljfni8shui" path="res://scenes/alien_spawner.tscn" id="4_jv6hw"]
[ext_resource type="PackedScene" uid="uid://bggpidytbdfvq" path="res://scenes/hud.tscn" id="6_bvdv1"]
[ext_resource type="AudioStream" uid="uid://ci6sthx2c45yy" path="res://assets/audio/hit.wav" id="7_j1ell"]
[ext_resource type="AudioStream" uid="uid://dkccb1mloe6r4" path="res://assets/audio/explode.wav" id="8_bp3sf"]

[node name="Game" type="Node2D"]
script = ExtResource("1_016gh")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("6_bvdv1")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_oggnv")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_ambjr")]
position = Vector2(83, 354)

[node name="AlienSpawner" parent="." instance=ExtResource("4_jv6hw")]

[node name="DeathZone" parent="." instance=ExtResource("4_8ls1t")]
position = Vector2(-81, 0)

[node name="EnnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_j1ell")

[node name="PlayerTakeDammageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bp3sf")

[connection signal="overheat" from="Player" to="." method="_on_player_overheat"]
[connection signal="took_dammage" from="Player" to="." method="_on_player_took_dammage"]
[connection signal="alien_spawned" from="AlienSpawner" to="." method="_on_alien_spawner_alien_spawned"]
[connection signal="path_alien_spawned" from="AlienSpawner" to="." method="_on_alien_spawner_path_alien_spawned"]
[connection signal="missed_ennemy" from="DeathZone" to="." method="_on_death_zone_missed_ennemy"]

[editable path="DeathZone"]
